Archive2/45/cb6fc60efad113/output
main.cpp: In function 'int main()':
main.cpp:17:22: error: 'numeric_limits' is not a member of 'std'
     unsigned int i = std::numeric_limits<int>::min();
                      ^
main.cpp:17:42: error: expected primary-expression before 'int'
     unsigned int i = std::numeric_limits<int>::min();
                                          ^
